[project]
name = "onchain-mcp"
version = "0.1.0"
description = "MCP server exposing live Solana on-chain data (balances, token holdings, prices, transactions) to any MCP client."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["mcp", "solana", "web3", "onchain", "model-context-protocol"]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
]

[project.scripts]
onchain-mcp = "onchain_mcp:main"

[project.optional-dependencies]
test = ["pytest>=8", "pytest-asyncio>=0.23"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["onchain_mcp.py"]

[tool.hatch.build.targets.wheel.sources]
"onchain_mcp.py" = "onchain_mcp.py"

[tool.pytest.ini_options]
asyncio_mode = "auto"
